--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.115.0
 uvicorn[standard]==0.31.1
 aiosqlite==0.20.0
 tweepy==4.16.0
-openai==1.51.0
+httpx==0.27.2
 python-dotenv==1.0.1
 pydantic-settings==2.5.2
 pytest==8.3.3
